force-app/main/default/objects/Metadata_Type_Config__mdt/Metadata_Type_Config__mdt.object-meta.xml
<CustomObject>
    <label>Metadata Type Config</label>
    <pluralLabel>Metadata Type Configs</pluralLabel>
    <description>Configuration for supported Salesforce metadata types including diff, rollback, and deployment capabilities.</description>
</CustomObject>