force-app/main/default/objects/Metadata_Type_Config__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <type>Text</type>
    <length>255</length>
    <description>The Salesforce Metadata API name for this metadata type.</description>
</CustomField>