force-app/main/default/objects/Metadata_Type_Config__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Text</type>
    <length>100</length>
    <description>Category grouping for this metadata type.</description>
</CustomField>