force-app/main/default/objects/Metadata_Type_Config__mdt/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <type>Text</type>
    <length>255</length>
    <description>User-friendly display name for this metadata type.</description>
</CustomField>