force-app/main/default/objects/Metadata_Type_Config__mdt/fields/Is_Deployable__c.field-meta.xml
<CustomField>
    <fullName>Is_Deployable__c</fullName>
    <label>Is Deployable</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this metadata type can be deployed via the Metadata API.</description>
</CustomField>