force-app/main/default/objects/Metadata_Type_Config__mdt/fields/Supports_Diff__c.field-meta.xml
<CustomField>
    <fullName>Supports_Diff__c</fullName>
    <label>Supports Diff</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this metadata type supports diff comparison.</description>
</CustomField>