force-app/main/default/objects/Metadata_Type_Config__mdt/fields/Supports_Rollback__c.field-meta.xml
<CustomField>
    <fullName>Supports_Rollback__c</fullName>
    <label>Supports Rollback</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this metadata type supports rollback operations.</description>
</CustomField>